--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,5 +17,15 @@
 <%= render "index" %>
 </tbody>
 </table>
+
+<% @products.each do |product| %>
+  <p><%= product.name %> | <%= number_to_currency product.price %>
+  <%= form_for @order_item do |f| %>
+    <%= f.hidden_field :product_id, value: product.id %>
+    <%= f.number_field :quantity %>
+    <%= f.submit "Add to cart" %>
+  <% end %></p>
+<% end %>
+
 </div>
 <div id="product-modal" class="modal fade"></div>
